Merged all recent code changes to tomcat 7 base
Full source based dropped in place.  Please note that differences are in
line breaks.  It appears that both eclipse and git hub gui will remove
formats for line break that show as squigly square.  Other than that,
code is the same in most locations.  Also, tomcat base updated from
7.0.4 to 7.0.29.  Some methods were removed as they were deprectated.
Others were retained due to usage currently.